<?xml version="1.0"?>
<package format="2">
  <name>behavior_execution</name>
  <version>0.0.0</version>
  <description>The behavior_execution package</description>

  <author email="jaiswal.h@outlook.com">Harsh Jaiswal</author>
  <maintainer email="jasiwal.h@outlook.com">Harsh Jaiswal</maintainer>

  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>behavior_msgs</depend>
  <depend>inspectrone_library</depend>
    
  

  <depend>rviz</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
