<?xml version="1.0"?>
<package format="2">
  <name>behavior_msgs</name>
  <version>0.0.0</version>
  <description>The behavior_msgs package</description>

  <author email="jaiswal.h@outlook.com">Harsh Jaiswal</author>
  <maintainer email="jasiwal.h@outlook.com">Harsh Jaiswal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
