<?xml version="1.0"?>
<package format="2">
  <name>behavior_tree</name>
  <version>0.0.0</version>
  <description>The behavior_tree package</description>

  <author email="jaiswal.h@outlook.com">Harsh Jaiswal</author>
  <maintainer email="jaiswal.h@outlook.com">Harsh Jaiswal</maintainer>

  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>behavior_msgs</depend>
  <depend>rviz</depend>
  <!-- <depend>inspectrone_library</depend> -->

</package>
